# ZTP

./: .env.example  .gitignore  README.md  docker-compose.yaml  package.json  podman-compose.yaml
.github/workflows/: backend-ci.yaml  frontend-ci.yaml
backend/: .golangci-lint.yaml  Makefile  README.md  buf.gen.yaml  create_sample_users.sh  go.mod  go.sum  sqlc.yaml
backend/cmd/api/: main.go
backend/cmd/db/: main.go
backend/cmd/db_migrate/: main.go
backend/deployment/: Dockerfile
backend/deployment/initializer/: Dockerfile  create_sample_users.sh
backend/deployment/migrations/: Dockerfile
backend/deployment/scripts/: create_aws_services.sh
backend/go/: .air.toml  Makefile  go.mod  go.sum
backend/internal/config/: config.go  database.go
backend/internal/domain/: user.go
backend/internal/error/: api.go  db.go  error.go  handler_errors.go
backend/internal/handlers/: create_user.go  get_user.go  handler_errors.go  handlers.go
backend/python/: pyproject.toml  requirements.txt
backend/python/ocr/: main.py  requirements.txt
backend/python/ocr/model/: model.py
backend/python/ocr/server/: config.py  log.py  server.py  worker.py
backend/python/ocr/worker/: config.py  message.py  worker.py
backend/python/scheduler/: main.py
backend/python/scheduler/server/: config.py  message.py  publisher.py  server.py  worker.py
frontend/: .env.example  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+212 files in other folders)
