[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "document_intelligence"
version = "0.1.0"
description = "Generated gRPC code package"
readme = ""
authors = [{ name = "Bartosz Piechnik" }]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["./gen"]
include = ["document*"]
